@@ -113,7 +113,7 @@ has _format_validations => (
       iri => sub { Mojo::URL->new($_[0])->is_abs },
       uuid => sub { $_[0] =~ /^[[:xdigit:]]{8}-(?:[[:xdigit:]]{4}-){3}[[:xdigit:]]{12}$/ },
       'json-pointer' => sub { (!length($_[0]) || $_[0] =~ m{^/}) && $_[0] !~ m{~(?![01])} },
-      'relative-json-pointer' => sub { $_[0] =~ m{^[0-9]+(?:#$|$|/)} && $_[0] !~ m{~(?![01])} },
+      'relative-json-pointer' => sub { $_[0] =~ m{^(?:0|[1-9][0-9]*)(?:#$|$|/)} && $_[0] !~ m{~(?![01])} },
       regex => sub { eval { qr/$_[0]/; 1 ? 1 : 0 } },
 
       # TODO: if the metaschema's $vocabulary entry is true, then we must die on
