@@ -4,6 +4,7 @@ Revision history for JSON-Schema-Draft201909
           - the default value for "validate_formats" is now true, to reflect
             the most typical usecase.
           - gracefully handle the erroneous schema { "type": null }
+          - fixes to relative-json-pointer format validation
 
 0.019     2020-12-08 18:40:10Z
           - further improvements to the "terse" output format
